2004-09-21 Niklas Knutsson  <nq@altern.org>

	* Rational factorization of higher degree polynomials

2004-09-20 Niklas Knutsson  <nq@altern.org>

	* Some result display tweaks
	* Update function titles and argument names
	* Update Swedish translation
	* Update documentation
	* Print quotation marks for symbolic structures when not allow unusable
	* Display e*e^x with multiplication sign

2004-09-19 Niklas Knutsson  <nq@altern.org>

	* Full factorization of quadratic polynomials
	* Transform sqrt(8) to 2*sqrt(2) (and similar) in exact mode
	* Fix xy-xy=xy !!!
	* Fix repeated apply in unknowns dialog

2004-09-18 Niklas Knutsson  <nq@altern.org>

	* Updated result sorting
	* (-x-y)/z --> -(x+y)/z

2004-09-17 Niklas Knutsson  <nq@altern.org>

	* Set unknowns dialog
	* More refined selection of popup menu items to show
	* Polynomial division
	* More reliable internal sorting

2004-09-16 Niklas Knutsson  <nq@altern.org>

	* Extensive enhancements of symbolic division
	* Alternative to assume that unknown denominators are non-zero

2004-09-12 Niklas Knutsson  <nq@altern.org>

	* Ex. 1/(x+10)=5, test if x+10 is zero after solve

2004-09-11 Niklas Knutsson  <nq@altern.org>

	* Evaluation options was not always preserved when converting to best units
	* Display x^(5/2) as x^2*sqrt(x)

2004-09-10 Niklas Knutsson  <nq@altern.org>

	* Internal sorting fixes
	* Update documentation
	* Update Swedish translation
	* Use displayed name when sorting

2004-09-09 Niklas Knutsson  <nq@altern.org>

	* Make factorization more functional

2004-09-08 Niklas Knutsson  <nq@altern.org>

	* Integration fixes
	* Use representsNonZero() for arguments that must be non-zero

2004-09-07 Niklas Knutsson  <nq@altern.org>

	* "times", "plus", "minus", "per", "AND", "OR"

2004-09-06 Niklas Knutsson  <nq@altern.org>

	* Finish GUI and user modifications for data sets

2004-09-01 Niklas Knutsson  <nq@altern.org>

	* rm -f qalculate; $(LN_S) qalculate-gtk qalculate
